Added hostname validation
Signed-off-by: Fabio Gollinucci <fbgolly@gmail.com>

--- a/styles/container-settings.less
+++ b/styles/container-settings.less
@@ -106,6 +106,9 @@
         margin-left: 75px;
         padding-left: 10px;
       }
+      .error{
+        color: red;
+      }
     }
     .env-vars-labels {
       width: 100%;
